dynamix/force-app/main/default/objects/communicat_o__Engage_Members__c/communicat_o__Engage_Members__c.object-meta.xml
<CustomObject>
    <label>Engage Member</label>
    <nameField>
        <displayFormat>EM-{000000}</displayFormat>
        <label>Engage Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engage Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>