dynamix/force-app/main/default/objects/communicat_o__Engage_Members__c/fields/communicat_o__Active__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>