dynamix/force-app/main/default/objects/communicat_o__Engage_Members__c/fields/communicat_o__Engage_360__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Engage_360__c</fullName>
    <label>Engage 360</label>
    <referenceTo>communicat_o__Engage__c</referenceTo>
    <relationshipLabel>Engage Members</relationshipLabel>
    <relationshipName>Engage_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>