dynamix/force-app/main/default/objects/communicat_o__Engage_Members__c/fields/communicat_o__Member_Id__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Member_Id__c</fullName>
    <label>Member Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>