dynamix/force-app/main/default/objects/communicat_o__Engage_Members__c/fields/communicat_o__Member_Name__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Member_Name__c</fullName>
    <label>Member Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>