dynamix/force-app/main/default/objects/communicat_o__Engage_Members__c/fields/communicat_o__Member_Type__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Member_Type__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>